# YieldAgent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
api/: __init__.py  main.py
api/routes/: campaigns.py  chat.py  platforms.py  providers.py
briefs/: example_brief.md  example_linkedin_brief.md  linkedin_live_test_brief.md
docs/: brief-format.md  campaign-setup-agent.md  linkedin-integration.md  meta-integration.md
notebooks/: campaign_setup.ipynb
src/yieldagent/: __init__.py  env.py
src/yieldagent/agents/: __init__.py  _cli.py  defaults.py
src/yieldagent/agents/campaign_setup/: __init__.py  cli.py  graph.py  nodes.py  prompts.py  state.py
src/yieldagent/agents/console/: __init__.py  ad_platforms.py  agent.py  chat.py  llm.py  prompts.py  providers.py  runtime.py  tools.py  validation.py
src/yieldagent/agents/linkedin_experiment/: __init__.py  cli.py  graph.py
src/yieldagent/agents/linkedin_setup/: __init__.py  cli.py  graph.py
src/yieldagent/connectors/: __init__.py  base.py  linkedin.py  registry.py
src/yieldagent/domain/: __init__.py  brief.py  campaign.py  primitives.py
src/yieldagent/integrations/: __init__.py  _base.py  browser_fallback.py
src/yieldagent/integrations/linkedin/: __init__.py  client.py  config.py  diagnostics.py  mapping.py  server.py  targeting.py
src/yieldagent/integrations/meta/: __init__.py  client.py  config.py  mapping.py  server.py
src/yieldagent/store/: __init__.py  campaigns.py  db.py
tests/: conftest.py  test_browser_fallback.py  test_env.py  test_store.py
tests/agents/: test_ad_platforms.py  test_campaign_plan.py  test_console.py  test_console_create.py  test_console_validation.py  test_linkedin_experiment.py  test_nodes.py
tests/connectors/: test_registry.py
tests/integrations/: test_linkedin_budget_floor.py  test_linkedin_client.py  test_linkedin_diagnostics.py  test_linkedin_forecast.py  test_linkedin_mapping.py  test_linkedin_publish.py  test_linkedin_targeting.py
tests/integrations/linkedin/: conftest.py  test_analytics.py  test_audiences.py  test_edits.py  test_leadsync.py
web/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/agent/: page.tsx
web/app/api/browser/session/: route.ts
web/app/api/browser/session/navigate/: route.ts
web/app/api/connections/: route.ts
web/app/api/connections/[provider]/setup/: route.ts
web/app/api/connections/linkedin/test/: route.ts
web/app/api/oauth/linkedin/callback/: route.ts
web/app/api/oauth/linkedin/start/: route.ts
web/app/api/webhooks/linkedin/leadsync/: route.ts
web/app/connections/: page.tsx
web/components/: Markdown.tsx  ModelPicker.tsx  ProposalCard.tsx  ProviderIcon.tsx  Sidebar.tsx  ThinkingIndicator.tsx  ToolStep.tsx  Topbar.tsx
web/lib/: api.ts  browser-sessions.ts  chat.ts  connections.ts  models.ts
web/public/: deck.html
