[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yieldagent"
version = "0.0.1"
description = "Foundations for autonomous agents that run the operational work of adtech."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "TensorOps" }]
keywords = ["adtech", "agents", "mcp", "media-buying", "adops"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
meta = [
    "mcp>=1.2",
    "httpx>=0.27",
]
linkedin = [
    "mcp>=1.2",
    "httpx>=0.27",
    # ISO 3166 country data for resolving brief geo codes to LinkedIn locations.
    "pycountry>=23",
]
agent = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-mcp-adapters>=0.1",
    # All supported LLM providers are bundled; pick at runtime via --model.
    # Required env var per provider: GOOGLE_API_KEY, ANTHROPIC_API_KEY, OPENAI_API_KEY.
    "langchain-google-genai>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/tensorops/YieldAgent"
Issues = "https://github.com/tensorops/YieldAgent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/yieldagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
